deploy-hpa.yml
apiVersion: apps/v1
kind: Deployment
# kind - the resource you want to provision inside k8s
metadata:
  name: hpa-example
 # name of the resource
  labels:
    app: hpa-example
spec:
  replicas: 3
  # adjust replica set 
  selector:
    matchLabels:
      app: hpa-example
  template:
    metadata:
      labels:
        app: hpa-example
    spec:
      containers:
      - name: hpa-example
        image: gcr.io/google_containers/hpa-example
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "250Mi"
            cpu: "200m"
