deploy-secret-env.yml
apiVersion: apps/v1
kind: Deployment
# kind - the resource you want to provision inside k8s
metadata:
  name: helloworld-deployment
  namespace: dev
 # name of the resource
  labels:
    app: helloworld
spec:
  replicas: 2
  # adjust replica set 
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - name: k8s-demo
        image: wardviaene/k8s-demo
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "250Mi"
            cpu: "250m"
          limits:
            memory: "500Mi"
            cpu: "250m"
