deploy-flask-service.yaml
apiVersion: apps/v1
kind: Deployment
# kind - the resource you want to provision inside k8s
metadata:
  name: flask-deployment
  # name of the resource
  labels:
    app: flask-app
spec:
  replicas: 2
  # adjust replica set 
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: lidorlg/python-flask-docker:4
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  selector:
    app: flask-app
  ports:
  - port: 80
    targetPort: 8080
  type: NodePort
