service-hpa.yml
apiVersion: v1
kind: Service
metadata:
  name: hpa-example-service
spec:
  selector:
    app: hpa-example
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
