service-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
  annotations:
    metallb.universe.tf/address-pool: first-pool
spec:
  selector:
    app: helloworld
  ports:
  - port: 80
    targetPort: 3000
  type: LoadBalancer
