service.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  selector:
    app: helloworld
  ports:
  - port: 5555
    targetPort: 3000
  type: NodePort
