ingress-hpa.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hpa
  namespace: test
spec:
  rules:
  - host: hpa.foobar.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hpa-example-service
            port:
              number: 80
  ingressClassName: nginx
